--- a/course/index.html
+++ b/course/index.html
@@ -1,1 +1,33 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>ETWS Protocol Training</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <header>
+    <h1>ETWS Protocol Training</h1>
+    <nav>
+      <ul>
+        <li><a href="module1.html">Module 1: Introduction</a></li>
+        <li><a href="module2.html">Module 2: Architecture</a></li>
+        <li><a href="quiz.html">Quiz</a></li>
+      </ul>
+    </nav>
+  </header>
+  
+  <main>
+    <section>
+      <h2>Welcome to ETWS Protocol Training</h2>
+      <p>This course will help you understand how ETWS works, its components, and configurations.</p>
+      <a href="module1.html">Start the Course</a>
+    </section>
+  </main>
+  
+  <footer>
+    <p>&copy; 2025 ETWS Course</p>
+  </footer>
+</body>
+</html>
