--- a/course/index.html
+++ b/course/index.html
@@ -3,31 +3,31 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ETWS Protocol Training</title>
+  <title>ETWS Course</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header>
-    <h1>ETWS Protocol Training</h1>
+    <h1>Welcome to PA-ETWS Training Course</h1>
     <nav>
       <ul>
-        <li><a href="module1.html">Module 1: Introduction</a></li>
-        <li><a href="module2.html">Module 2: Architecture</a></li>
-        <li><a href="quiz.html">Quiz</a></li>
+        <li><a href="module1.html">Module 1: Introduction to ETWS</a></li>
+        <li><a href="module2.html">Module 2: ETWS Architecture</a></li>
+        <li><a href="module3.html">Module 3: ETWS Message Format</a></li>
+        <li><a href="module4.html">Module 4: ETWS Testing</a></li>
       </ul>
     </nav>
   </header>
-  
+
   <main>
     <section>
-      <h2>Welcome to ETWS Protocol Training</h2>
-      <p>This course will help you understand how ETWS works, its components, and configurations.</p>
-      <a href="module1.html">Start the Course</a>
+      <h2>Course Overview</h2>
+      <p>This course will cover the Earthquake and Tsunami Warning System (ETWS), including its components, message structure, and how it's tested. By the end of the course, you should have a clear understanding of ETWS and how to implement and troubleshoot it.</p>
     </section>
   </main>
-  
+
   <footer>
-    <p>&copy; 2025 ETWS Course</p>
+    <p>&copy; 2025 PehkAsa ETWS Course</p>
   </footer>
 </body>
 </html>
